--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -3,7 +3,7 @@
 .card {
   background-color: $bg-alt;
   border: 1px solid $text-light;
-  margin: 1.6rem;
+  margin: 1rem;
 
   &:hover {
     border: 1px solid $color-1;
