--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     width: 50vw;
-    min-width: 400px;
+    min-width: 300px;
     background-color: $bg;
     padding: 1rem 2rem 2rem 2rem;
     border: 1px solid $text-light;
