--- a/scss/_showcase.scss
+++ b/scss/_showcase.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100vh;
+  width: auto;
   padding: 0 3rem;
   line-height: 1.3;
 
